--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <!-- Section 1-->
+        <section class="section-1">
+            <h1 class="section-1-heading">Chandler Dorsey</h1>
+            <img src="blankimg.png" class="person-img"/>
+        </section>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
