--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <section class="section-1">
             <h1 class="section-1-heading">Chandler Dorsey</h1>
             <img src="blankimg.png" class="person-img"/>
+            <h3 class="person-name">Chandler Dorsey</h3>
+            <a href="#" class="section-1-btn">Projects</a>
         </section>
+        <!-- End of Section 1-->
     </div>
     <script src="script.js"></script>
 </body>
