--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
   <section id="about">
     <div class="about container">
       <div class="col-left">
+        <div class="about-img">
+          <img src="me.JPG" border="10">
+        </div>
       </div>
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
