--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             majoring in Computer Science and am enjoying what I am doing
         </p>
 
-       <!-- Make Avalible when Resume Complete--> 
-       <!--<a href="#" class="cta">Download Resume</a>-->
+       <a href="#" class="cta">Download Resume</a>
 
 
       </div>
