--- a/index.html
+++ b/index.html
@@ -1,89 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Chandler Dorsey</title>
-</head>
-<body>
-  <!-- Header -->
-  <section id="header">
-    <div class="header container">
-      <div class="nav-bar">
-        <div class="title-name">
-         <h1>Chandler Dorsey</h1>
-        </div>
-        <div class="nav-list">
-          <div class="hamburger"><div class="bar"></div></div>
-          <ul>
-            <li><a href="#home" data-after="Home">Home</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
-            <li><a href="#contact" data-after="Contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Header -->
-
-
-  <!-- Home Section  -->
-  <section id="home">
-    <div class="home container">
-      <div>
-        <h1>Hello, <span></span></h1>
-        <h1>My Name is <span></span></h1>
-        <h1>Chandler<span></span></h1>
-        <a href="#about" type="button" class="cta">About Me</a>
-      </div>
-    </div>
-  </section>
-  <!-- End Home Section  -->
-
-
-
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img src="me.JPG" border="10">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Chandler Dorsey</title>
+  </head>
+  <body>
+    <!-- Header -->
+    <section id="header">
+      <div class="header container">
+        <div class="nav-bar">
+          <div class="title-name">
+            <h1>Chandler Dorsey</h1>
+          </div>
+          <div class="nav-list">
+            <div class="hamburger"><div class="bar"></div></div>
+            <ul>
+              <li><a href="#home" data-after="Home">Home</a></li>
+              <li><a href="#about" data-after="About">About</a></li>
+              <li><a href="#contact" data-after="Contact">Contact</a></li>
+            </ul>
+          </div>
         </div>
       </div>
-      <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Student at Texas State University</h2>
-        <p>My name is Chandler Dorsey and I am a student at Texas State Univeristy.I am 
-            majoring in Computer Science and am enjoying what I am doing
-        </p>
+    </section>
+    <!-- End Header -->
 
-       <a href="#" class="cta">Download Resume</a>
-
-
+    <!-- Home Section  -->
+    <section id="home">
+      <div class="home container">
+        <div>
+          <h1>Hello, <span></span></h1>
+          <h1>My Name is <span></span></h1>
+          <h1>Chandler<span></span></h1>
+          <a href="#about" type="button" class="cta">About Me</a>
+        </div>
       </div>
-    </div>
-  </section>
-  <!-- End About Section -->
+    </section>
+    <!-- End Home Section  -->
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="contact container">
-      <div><h1 class="section-title">Contact <span>info</span></h1></div>
-      <div class="contact-items">
-        <div class="contact-item">
-          <div class="icon"><img src="contact.jpg"/></div>
-          <div class="contact-info">
-            <h1>Phone</h1>
-            <h2>940-222-9387</h2>
-            <h2>thechandlerdorsey@gmail.com</h2>
+    <!-- About Section -->
+    <section id="about">
+      <div class="about container">
+        <div class="col-left">
+          <div class="about-img">
+            <img src="me.JPG" border="10" />
+          </div>
+        </div>
+        <div class="col-right">
+          <h1 class="section-title">About <span>me</span></h1>
+          <h2>Student at Texas State University</h2>
+          <p>
+            My name is Chandler Dorsey and I am a student at Texas State
+            University.I am majoring in Computer Science and am enjoying what I
+            am doing
+          </p>
+
+          <a href="#" class="cta">Download Resume</a>
+        </div>
+      </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <div class="contact container">
+        <div>
+          <h1 class="section-title">Contact <span>info</span></h1>
+        </div>
+        <div class="contact-items">
+          <div class="contact-item">
+            <div class="icon"><img src="contact.jpg" /></div>
+            <div class="contact-info">
+              <h1>Phone</h1>
+              <h2>940-222-9387</h2>
+              <h2>thechandlerdorsey@gmail.com</h2>
             </div>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
