--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <h1 class="section-title">About <span>me</span></h1>
           <h2>Student at Texas State University</h2>
           <p>
-            My name is Chandler Dorsey and I am a student at Texas State
-            University.I am majoring in Computer Science and am enjoying what I
-            am doing
+            My name is Chandler Dorsey.I am currently in my freshman year at
+            Texas State University majoring in Computer Science.I am proficient
+            in HTML and CSS and learning more languages.
           </p>
 
           <a href="#" class="cta">Download Resume</a>
