--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <h1>Chandler Dorsey</h1>
           </div>
           <div class="nav-list">
-            <div class="hamburger"><div class="bar"></div></div>
+            <div class="menu"><div class="bar"></div></div>
             <ul>
-              <li><a href="#home" data-after="Home">Home</a></li>
-              <li><a href="#about" data-after="About">About</a></li>
-              <li><a href="#contact" data-after="Contact">Contact</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
         </div>
       </div>
     </section>
     <!-- End Header -->
-
-    <!-- Home Section  -->
+    <!-- Home -->
     <section id="home">
       <div class="home container">
         <div>
@@ -38,9 +38,8 @@
         </div>
       </div>
     </section>
-    <!-- End Home Section  -->
-
-    <!-- About Section -->
+    <!-- End  -->
+    <!-- About -->
     <section id="about">
       <div class="about container">
         <div class="col-left">
@@ -56,14 +55,40 @@
             Texas State University majoring in Computer Science.I am proficient
             in HTML and CSS and learning more languages.
           </p>
-
           <a href="#" class="cta">Download Resume</a>
+          <a href="https://github.com/ChandlerDorsey" class="cta">GitHub</a>
+          <a href="#" class="cta">LinkedIn</a>
         </div>
       </div>
     </section>
-    <!-- End About Section -->
-
-    <!-- Contact Section -->
+    <!-- End About -->
+    <!-- Projects Section -->
+    <section id="projects">
+      <div class="projects container">
+        <div class="projects-header">
+          <h1 class="section-title">My <span>Projects</span></h1>
+        </div>
+        <div class="all-projects">
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Project 1</h1>
+              <h2>ColorNow | Random Hex Color Generator</h2>
+              <p>
+                ColorNow allows you to randomly generate hex colors with just a
+                click of a button. It was built using HTML,CSS, and Javascript.
+                This is the first project I have done using Javascript and plan
+                to use it again.
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="colornow.png" alt="img" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Projects Section -->
+    <!-- Contact -->
     <section id="contact">
       <div class="contact container">
         <div>
@@ -71,9 +96,9 @@
         </div>
         <div class="contact-items">
           <div class="contact-item">
-            <div class="icon"><img src="contact.jpg" /></div>
+            <div class="icon"><img src="contact.png" /></div>
             <div class="contact-info">
-              <h1>Phone</h1>
+              <h1>Phone & Email</h1>
               <h2>940-222-9387</h2>
               <h2>thechandlerdorsey@gmail.com</h2>
             </div>
@@ -81,8 +106,7 @@
         </div>
       </div>
     </section>
-    <!-- End Contact Section -->
-
+    <!-- End Contact -->
     <script src="script.js"></script>
   </body>
 </html>
