--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 1</h1>
-              <h2>ColorNow | Random Hex Color Generator</h2>
+              <h2>
+                <a href="https://chandlerdorsey.com/ColorNow/"
+                  >ColorNow | Random Hex Color Generator</a
+                >
+              </h2>
               <p>
                 ColorNow allows you to randomly generate hex colors with just a
                 click of a button. It was built using HTML,CSS, and Javascript.
@@ -81,7 +85,7 @@
               </p>
             </div>
             <div class="project-img">
-              <img src="colornow.png" alt="img" />
+              <img src="colornow.png" class="project-img" />
             </div>
           </div>
         </div>
