--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
       gtag("config", "UA-122573612-2");
     </script>
-
+    <meta
+      name="google-site-verification"
+      content="tDeW0-k0rY-1KKADcihBQyl_mvqtNb_RClPOHyyBdqk"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
